--- a/python_connect_mysql/Conectando _com_formulario/formulario.html
+++ b/python_connect_mysql/Conectando _com_formulario/formulario.html
@@ -7,7 +7,11 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(to right, rgb(20, 147, 220), rgb(17, 54, 71));
+            background-image: url(img/close-up-dry-autumn-leaf-with-veins.jpg);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
         }
         .box{
             color: white;
@@ -15,7 +19,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(0, 0, 0, 0.5);
             padding: 15px;
             border-radius: 15px;
             width: 20%;
@@ -62,6 +66,20 @@
             border-radius: 10px;
             outline: none;
             font-size: 15px;
+        }
+        #submit{
+            background-color: dodgerblue ;
+            width: 100%;
+            border: none;
+            border-radius: 10px;
+            padding: 15px;
+            color: white;
+            font-size: 17px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        #submit:hover {
+            background-color: rgba(30, 143, 255, 0.749) ;
         }
     </style>
 </head>
